--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "jest": "^23.6.0",
+    "jsdocs": "^1.0.0",
     "jsonwebtoken": "^8.4.0",
     "mongodb-memory-server": "^2.7.3",
     "mongoose": "^5.3.13",
@@ -32,6 +33,5 @@
     "supertest": "^3.3.0",
     "swagger-ui-express": "^4.0.2"
   },
-
   "homepage": "https://github.com/rkgallaway/17-oauth#readme"
 }
