--- a/web-server/package.json
+++ b/web-server/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
 
     "dotenv": "^6.2.0",
-    "express": "^4.16.3"
-    "bcrypt": "^3.0.2",
+    "express": "^4.16.3",
     "cors": "^2.8.4",
     "debug": "^4.1.0",
     "dotenv": "^6.1.0",
